@@ -3733,4 +3733,10 @@ replaced by single letters. --/
     \r\r\r\P
     \r\r\r\P\P     
 
+/-- This one is here because Perl does not match: it seems to allow the COMMIT
+to escape from the assertion. --/
+
+/(?=a(*COMMIT)b|ac)ac|ac/
+    ac
+
 /-- End of testinput2 --/
