@@ -8719,4 +8719,12 @@ No match
     aac
  0: aac
 
+/(?!a(*COMMIT)b)ac|cd/
+    ac
+ 0: ac
+    
+/((?=a(*COMMIT)b)ab|ac){0}(?:(?1)|a(c))/
+    ac 
+ 0: ac
+
 /-- End of testinput1 --/
